# display3d.sh

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: display_model.rs  main.rs
src/display_model/: debug_manager.rs
src/init/: config.rs
